# toki2

./: .dockerignore  .env  .gitignore  AGENTS.md  AGENT_MVP_HANDOFF.md  CLAUDE.md  Cargo.toml  Dockerfile  PR_MENTION_IMPLEMENTATION_PLAN.md  README.md  arch-setup.sh  avatar_cache_implementation_plan.md  compose.yaml  fix-docker-permissions.sh  fly.toml  justfile  plot.html  quick-setup.sh
.cargo/: audit.toml
az-devops/: Cargo.toml
az-devops/src/: lib.rs  repo_client.rs
az-devops/src/models/: comment.rs  identity.rs  iteration.rs  mod.rs  pull_request.rs  thread.rs  work_item.rs
az-devops/src/utils/: mod.rs
issue-cli/: Cargo.toml
issue-cli/src/: main.rs
milltime/: .env.example  Cargo.toml
milltime/examples/: unique_projects.rs
milltime/src/: auth.rs  client.rs  lib.rs  milltime_url.rs
milltime/src/domain/: activity.rs  attest_level.rs  mod.rs  project_registration.rs  project_search.rs  time_info.rs  time_period_info.rs  timer.rs  user_calendar.rs
milltime/src/period_info/: fetch_period_info.rs  mod.rs
toki-api/: .env.example  Cargo.toml  bacon.toml
toki-api/.sqlx/: query-026a4a6fc00c2df84c431298c7dabe77663d296ccac7cfd1e628fa545590e3e7.json  query-026e4285a58e8b0c0ef45ccff94cbf53b8b9367b07d8fc8380bd2927eb31b856.json  query-04f8354faff05b84b0ed028d139b99b2b2e778224716fe7b7fee470d2ff80fcf.json  query-05dc742cf5195c7d8452fc64af73e638ffd210367b0b90dae1c6a2ad18b5bbab.json  query-0d2de90b227d0282c0e040cfaa266c3cc3fec0a12d9a1aa9530a320e1cc9899f.json  query-1165bd69a7ff24f71de51ea06d2f60e8f4020aff79cf60423ac415cc5974ce96.json  query-14c4903454d7dea82bf8d9f4abd40484c6b01021c1991381ef53e2580a8acde5.json  query-165e25cd892a3817ff634574cd6d5284ff4a30e070a18e64791d086442274ea7.json  query-1dbbf9fd1e30024c4a0d0cfc7767b3650725f936f62e32f07ea53271f1fbd2fa.json  query-1e1f38b7c9015f783b04ef5039de50904c9bc3376a070212b3254024d3b8e8f5.json  query-22986e9e08a9a71185adfd27a78c759740eb15234ed6b198e6d7baf7756202bf.json  query-2305aee4c292f0d5887914c9ee4f9cd16952b10c6df6f52417f518e664883c13.json  query-23a553117341ca42e3a367c08988614018c883cf2ddf4a30be27b986ea9ea25e.json  query-294ae2857a89fbdcc6ddb6dc02d80234f7a972330e3dd86a030f7ff8726ad28b.json  query-30bd65095641beb71ea34e4f210510f8adba01eb8c0eddc4a021663f3600cf36.json  query-374e253031afbaeb9ee3999dd410231bf4c44ff8efd8e01145b74c46f6edda91.json  query-3d2c0e9889ef553201c9fde24194676fd165ef1d0d5dc927879f728531e56f44.json  query-466bcce537d027a8322ba837b32946e87de8b8610d09444cbbc43ae25ff38d43.json  query-4de6a2d102d5f32a9ea18c688bf0369f6817685d7f045fc87c18e363775e0b67.json  query-4e9e8bb166d9af9e6dfd7b8719601dbf35c194d02b5bdd401a1312645504343c.json  query-50ef1a8362807fa9bda31b5b350eb0f843e59ee5595eafa2081ad4d25832d322.json  query-5bb83856e4a687074ef668758a2bb102f44e1edc17353e81470f9ced134b38c1.json  query-5dd229a5ddc8a7ea16c9b44a536fe7e152b757693645b2eccb49cd2de91cb4f9.json  query-5ef8a34389894e737ff0ecd926b06acdc24184feea2a6726059608c816c5606f.json  query-66404001aaa432bb201713792ad1002071aedcf109f58e62082784071c368368.json  query-69393b1bdacd9c0bc373352b790e066e7c9f26269b99eeae7d14e0e6df9e4491.json  query-6b2891cb4ef7981320afadc16d1552fe0693e3371d25919df7b7451dbfca6e0d.json  query-7466b0f3a871b144753dd56c18239fabc1fdd2ce5d41c537c0df3e90cf95b406.json  query-8557872e0bb4ec41241c5027536634e3cd48eaa3243ffcb1c67278d821365f49.json  query-8620bc330263c5523a5d38cb9ddc493f6da4a99a2d8a099bcd9f54dcef60a522.json  query-8681466e32155ee4a4a92a314264ae26f8fb44999274e5cf8b668a6db223bc18.json  query-86b6cbbc530c2d79d7cc106967944e6a2b4089b4a42302ab8e878ab5403c0fa8.json  query-88348138f212a0723fd1b11773759ca20eee3d4eadfca632c322f23922ce0e1f.json  query-8c96b86dbde1801b993e1e6a15cc1e83718ef2cbfc517617275fb24d5e906dff.json  query-8feb05d606a498432411a677484c9fe4d655d996a96b97b78c6f0c9138dee111.json  query-91b62aaf67f424e6cc413380dd7668f0de12583faac70c14028b8fb34fb6a6a7.json  query-9a6e8a0883191eb373b1f04ddb55c045cff71f3e83a7a81e2c0cd419690d985f.json  query-a3b6d7946e9528120747ad1699a008cd21ef66f33535c7063e94fef2c19ce097.json  query-a97ace530a144468db47de9207cf853b7d776b3f92cb056e31e4ebb19c9e0f0a.json  query-c2ab51c6047a03b187539718cf8eb4a157cae880eb8a56c3bfb83623f1391e46.json  (+12 more)
toki-api/config/: base.yaml  local.yaml  production.yaml
toki-api/migrations/: 20240112162901_initial_migration.sql  20240113155706_repo_unique_constraint.sql  20240114103421_users_table.sql  20240124000000_add_milltime_project_id.sql  20240124000000_add_repository_milltime_projects.sql  20240204195217_user_repo_follow.sql  20240328094825_push_subscriptions.sql  20240622161341_timer_history.sql  20240922091333_user_roles.sql  20240925161825_timer_reg_id.sql  20241001190117_timer_type.sql  20241007090853_nullable_timer_fields.sql  20241102125032_notifications_tables.sql  20241109082227_push_enabled_column.sql  20241109113908_timezone_push_subs.sql  20250621205032_add_comment_mentioned_notification_type.sql  20251121120000_user_avatar.sql  20251121120000_user_avatars.sql  20251123120000_user_avatars_table.sql  20251123133000_add_user_avatar_updated_at.sql  20260128112648_add_session_auth_hash.sql  20260129223801_remove_milltime_timer_type.sql  20260205220000_create_search_documents.sql  20260208135929_add_timer_history_indices.sql  20260214154000_add_user_avatars.sql  20260421120000_add_time_tracking_user_links.sql  20260503120000_agent_run_work_items.sql  20260601000000_drop_timer_type_column.sql
toki-api/scripts/: db_prod_pull.sh  init_db.sh  set_admin.sh
toki-api/src/: app_state.rs  auth.rs  config.rs  factory.rs  main.rs  oauth.rs  repository.rs  router.rs
toki-tui/: .env.tui  .gitignore  ARCH_LINUX_NOTES.md  Cargo.toml  GETTING_STARTED.md  README.md  SETUP_GUIDE.md  TEST_USER.md  setup.sh
toki-tui/docs/: DATABASE_REFERENCE.md  NEW_TUI_FLOW.md  TEST_TUI_FEATURES.md  TUI_FEATURES_COMPLETE.md  TUI_FEATURE_SUMMARY.md  TUI_QUICK_REFERENCE.md  TUI_VISUAL_GUIDE.md
toki-tui/src/: api_client.rs  app.rs  bootstrap.rs  cli.rs  config.rs  editor.rs  git.rs  log_notes.rs  login.rs  main.rs  session_store.rs  terminal.rs  test_data.rs  test_support.rs  time_utils.rs  types.rs
(+495 files in other folders)
