[package]
name = "az-devops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.25.0"
azure_devops_rust_api = { version = "0.28.0", features = [
    "core",
    "git",
    "pipelines",
    "wit",
    "work",
    "graph",
] }
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
thiserror = "2.0.12"
time.workspace = true
tokio.workspace = true
tracing.workspace = true
typespec = "0.4.0"

[dev-dependencies]
dotenvy.workspace = true
