[package]
name = "issue-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
az-devops = { path = "../az-devops" }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "2.0.12"
anyhow = "1.0.98"
reqwest = { version = "0.12.5", features = ["json"] }
clap = { version = "4.5.38", features = ["derive"] }
git2 = "0.20.2"
dotenvy = "0.15.7"