[package]
name = "milltime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
dotenvy = "0.15.7"
time = { version = "0.3.31", features = ["serde", "parsing"] }
tracing = { version = "0.1.40", features = ["attributes"] }
thiserror = "1.0.56"
reqwest = { version = "0.11.23", features = ["json", "cookies", "multipart"] }
axum-extra = { version = "0.9.1", features = ["typed-header", "cookie"] }
chrono = { version = "0.4.38", features = ["serde"] }
base64 = "0.22.1"
