[package]
name = "milltime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dotenvy.workspace = true
time.workspace = true
tracing.workspace = true
thiserror = "1.0.56"
reqwest = { workspace = true, features = ["json", "cookies", "multipart"] }
axum-extra = { version = "0.9.1", features = ["typed-header", "cookie"] }
chrono.workspace = true
base64.workspace = true

[lints.clippy]
too_many_arguments = "allow"
