[package]
name = "toki-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
az-devops = { path = "../az-devops" }
milltime = { path = "../milltime" }
dotenvy = "0.15.7"
itertools = "0.13.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
tokio = { version = "1.35.1", features = ["full"] }
time = { version = "0.3.31", features = ["serde", "parsing"] }
chrono = { version = "0.4.38", features = ["serde"] }
axum = { version = "0.7.3", features = ["ws", "macros"] }
axum-extra = { version = "0.9.1", features = ["typed-header", "cookie"] }
config = "0.14.0"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "time",
    "local-time",
] }
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = [
    "sink",
    "std",
] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
strum = { version = "0.26.2", features = ["derive"] }
sqlx = { version = "0.8.0", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "time",
    "migrate",
] }
axum-login = "0.16.0"
thiserror = "1.0"
oauth2 = "4.4.2"
reqwest = { version = "0.12.5", features = ["json"] }
async-trait = "0.1.77"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
web-push = "0.10.1"
url = "2.5.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
strum_macros = "0.26.4"
tower-sessions-moka-store = "0.14"
tower-sessions-sqlx-store = { version = "0.14.2", features = ["postgres"] }
