[package]
name = "toki-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
az-devops = { path = "../az-devops" }
milltime = { path = "../milltime" }
dotenvy.workspace = true
itertools = "0.13.0"
serde.workspace = true
serde_json.workspace = true
serde_with = "3.4.0"
tokio.workspace = true
time.workspace = true
chrono.workspace = true
axum = { version = "0.7.3", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.9.1", features = ["typed-header", "cookie"] }
config.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "time",
    "local-time",
] }
htmd = "0.5"
ammonia = "4.1.2"
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = [
    "sink",
    "std",
] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
strum = { version = "0.26.2", features = ["derive"] }
sqlx = { version = "0.8.0", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "time",
    "migrate",
] }
axum-login = "0.16.0"
thiserror = "1.0"
oauth2 = "4.4.2"
reqwest = { workspace = true, features = ["json"] }
async-trait = "0.1.77"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
web-push = "0.10.1"
url = "2.5.0"
aes-gcm = "0.10.3"
base64.workspace = true
strum_macros = "0.26.4"
tower-sessions-moka-store = "0.14"
tower-sessions-sqlx-store = { version = "0.14.2", features = ["postgres"] }
image = { version = "0.25.9", features = ["jpeg", "png"] }
webp = "0.3.1"
moka = { version = "0.12", features = ["sync"] }
