[package]
name = "toki-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29"
tui-piechart = "0.3.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database access (same setup as toki-api)
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }

# Time handling (same as toki-api)
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros", "local-offset"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Reuse existing crates
milltime = { path = "../milltime" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
