[package]
name = "toki-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29"
tui-piechart = "0.3.0"
throbber-widgets-tui = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Time handling (same as toki-api)
time = { version = "0.3", features = [
  "serde",
  "formatting",
  "parsing",
  "macros",
  "local-offset",
] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"
dirs = "5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fuzzy matching
fuzzy-matcher = "0.3"

# URL encoding
urlencoding = "2"

# Password input (no echo)
rpassword = "7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
