[package]
name = "toki-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29"
tui-piechart = "0.3.0"
throbber-widgets-tui = "0.11"

# Async runtime
tokio.workspace = true

# HTTP client
reqwest = { workspace = true, features = ["json", "cookies"] }

# Time handling (same as toki-api)
time = { workspace = true, features = [
  "serde",
  "formatting",
  "parsing",
  "macros",
  "local-offset",
] }

# Error handling
anyhow.workspace = true

# Configuration
config.workspace = true
clap = { version = "4.5.40", features = ["derive"] }
dirs = "5"
toml = "0.8"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Fuzzy matching
fuzzy-matcher = "0.3"

# URL encoding
urlencoding = "2"

# Password input (no echo)
rpassword = "7"
